--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "to do app to store tasks on the server database",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start":"node index.js"
   },
   "author": "",
   "license": "ISC",
@@ -15,6 +16,7 @@
     "express": "^4.18.2",
     "express-validator": "^7.0.1",
     "jsonwebtoken": "^9.0.2",
+    "mongodb": "^6.2.0",
     "mongoose": "^7.6.3"
   }
 }
